--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
+  "activationEvents": [
+    "onStartupFinished"
+  ],
   "main": "./extension.js",
   "contributes": {
     "commands": [
       {
         "command": "codepod.sendFile",
-        "title": "Send File to Gemini"
+        "title": "CodePod: Send File to Gemini"
       }
     ],
     "menus": {
@@ -47,17 +49,17 @@
     "test": "node ./test/runTest.js"
   },
   "devDependencies": {
-    "@types/vscode": "^1.60.0",
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.2",
     "@types/node": "14.x",
+    "@types/vscode": "^1.60.0",
     "eslint": "^7.27.0",
     "glob": "^7.1.7",
-    "mocha": "^8.4.0",
+    "mocha": "^11.1.0",
     "typescript": "^4.3.2",
     "vscode-test": "^1.5.2"
   },
   "dependencies": {
-    "axios": "^1.6.0"
+    "axios": "^1.8.2"
   }
 }
