--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "codepod",
   "displayName": "Code Podcast Generator",
   "description": "Send your entire file to Gemini AI and get a podcast episode generated for you.",
-  "version": "0.1.0",
+  "version": "0.1.1",
+  "publisher": "AnkyKongStudios",
   "repository": {
     "type": "git",
     "url": "https://github.com/ankykong/codepod.git"
@@ -16,7 +17,7 @@
   "activationEvents": [
     "onStartupFinished"
   ],
-  "main": "./extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "commands": [
       {
@@ -38,15 +39,23 @@
         "codepod.apiKey": {
           "type": "string",
           "default": "",
-          "description": "API Key for Gemini"
+          "description": "API key for Gemini"
+        },
+        "codepod.systemPrompt": {
+          "type": "string",
+          "default": "You are a podcast script writer that is extremely adept in coding. You understand nuances in code and areas where code issues could occur. You will make a podcast script about the code given and will add in natural umms, ahhs, etc. Also, you will add in interjections that are natural in a podcast. Lastly, you will give a high level overview of the code and then go into the nitty gritty details to find potential issues. Make sure that one host is questioning the other to come up with responses as to why things may work or not work.",
+          "description": "System prompt to provide context to Gemini before processing the file"
         }
       }
     }
   },
   "scripts": {
-    "lint": "eslint .",
-    "pretest": "yarn run lint",
-    "test": "node ./test/runTest.js"
+    "webpack": "webpack --config webpack.config.js",
+    "build": "npm run webpack",
+    "vscode:prepublish": "npm run build"
+  },
+  "dependencies": {
+    "axios": "^1.8.2"
   },
   "devDependencies": {
     "@types/glob": "^7.1.3",
@@ -56,10 +65,10 @@
     "eslint": "^7.27.0",
     "glob": "^7.1.7",
     "mocha": "^11.1.0",
+    "ts-loader": "^9.5.2",
     "typescript": "^4.3.2",
-    "vscode-test": "^1.5.2"
-  },
-  "dependencies": {
-    "axios": "^1.8.2"
+    "vscode-test": "^1.5.2",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   }
 }
