--- a/package.json
+++ b/package.json
@@ -1,74 +1,55 @@
 {
-  "name": "codepod",
-  "displayName": "Code Podcast Generator",
-  "description": "Send your entire file to Gemini AI and get a podcast episode generated for you.",
-  "version": "0.1.1",
+  "name": "CodePod",
+  "displayName": "CodePod",
+  "description": "Generate podcast scripts from your code using Gemini.",
+  "version": "0.1.2",
   "publisher": "AnkyKongStudios",
+  "engines": {
+    "vscode": "^1.78.0"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/ankykong/codepod.git"
   },
-  "engines": {
-    "vscode": "^1.60.0"
-  },
-  "categories": [
-    "Other"
-  ],
   "activationEvents": [
-    "onStartupFinished"
+    "onCommand:codepod.generatePodcast"
   ],
-  "main": "./dist/extension.js",
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "codepod.sendFile",
-        "title": "CodePod: Send File to Gemini"
+        "command": "codepod.generatePodcast",
+        "title": "CodePod: Generate Podcast Script"
       }
     ],
-    "menus": {
-      "editor/context": [
-        {
-          "command": "codepod.sendFile",
-          "group": "geminiGroup"
-        }
-      ]
-    },
     "configuration": {
       "title": "CodePod",
       "properties": {
         "codepod.apiKey": {
           "type": "string",
-          "default": "",
-          "description": "API key for Gemini"
-        },
-        "codepod.systemPrompt": {
-          "type": "string",
-          "default": "You are a podcast script writer that is extremely adept in coding. You understand nuances in code and areas where code issues could occur. You will make a podcast script about the code given and will add in natural umms, ahhs, etc. Also, you will add in interjections that are natural in a podcast. Lastly, you will give a high level overview of the code and then go into the nitty gritty details to find potential issues. Make sure that one host is questioning the other to come up with responses as to why things may work or not work.",
-          "description": "System prompt to provide context to Gemini before processing the file"
+          "description": "Your Gemini API key."
         }
       }
     }
   },
   "scripts": {
-    "webpack": "webpack --config webpack.config.js",
-    "build": "npm run webpack",
-    "vscode:prepublish": "npm run build"
-  },
-  "dependencies": {
-    "axios": "^1.8.2"
+    "vscode:prepublish": "npm run compile",
+    "compile": "tsc -p ./",
+    "watch": "tsc -watch -p ./",
+    "pretest": "npm run compile && npm run lint",
+    "lint": "eslint src --ext ts",
+    "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.3",
-    "@types/mocha": "^8.2.2",
-    "@types/node": "14.x",
-    "@types/vscode": "^1.60.0",
-    "eslint": "^7.27.0",
-    "glob": "^7.1.7",
-    "mocha": "^11.1.0",
-    "ts-loader": "^9.5.2",
-    "typescript": "^4.3.2",
-    "vscode-test": "^1.5.2",
-    "webpack": "^5.98.0",
-    "webpack-cli": "^6.0.1"
+    "@types/node": "18.x",
+    "@types/vscode": "^1.78.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "@vscode/test-electron": "^2.3.2",
+    "eslint": "^8.41.0",
+    "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@google/generative-ai": "^0.24.0"
   }
 }
