--- a/package.json
+++ b/package.json
@@ -28,6 +28,20 @@
         "codepod.apiKey": {
           "type": "string",
           "description": "Your Gemini API key."
+        },
+        "codepod.elevenLabsApiKey": {
+          "type": "string",
+          "description": "Your Eleven Labs API key."
+        },
+        "codepod.host1VoiceId": {
+          "type": "string",
+          "description": "Voice ID for Host1 from Eleven Labs.",
+          "default": "21m00Tcm4TlvDq8ikWAM"
+        },
+        "codepod.host2VoiceId": {
+          "type": "string",
+          "description": "Voice ID for Host2 from Eleven Labs.",
+          "default": "AZnzlk1XvdvUeBnXmlld"
         }
       }
     }
@@ -41,15 +55,18 @@
     "test": "node ./out/test/runTest.js"
   },
   "devDependencies": {
+    "@types/fluent-ffmpeg": "^2.1.27",
     "@types/node": "18.x",
     "@types/vscode": "^1.78.0",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "@vscode/test-electron": "^2.3.2",
     "eslint": "^8.41.0",
+    "fluent-ffmpeg": "^2.1.3",
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@google/generative-ai": "^0.24.0"
+    "@google/generative-ai": "^0.24.0",
+    "elevenlabs": "1.54.0"
   }
 }
